fix project homepage

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://DiaaAlHadi/github.io/home-rental",
+  "homepage": "https://diaaalhadi.github.io/home-rental",
   "name": "home-rental",
   "version": "0.1.0",
   "private": true,
